<resources>
    <string name="app_name">SingleScreen</string>
    <string name="kids_play_indoor_play_center">Kids Play, Indoor play center.</string>
    <string name="_5551_happy_ln_spring_tx_77389">5551 Happy Ln. Spring TX. 77389</string>
    <string name="kids_play_g_mail_com">kidsplay@gmail.com</string>
    <string name="tu_sun_10am_7pm">Tu-Sun / 10am-7pm</string>
    <string name="book_your_party">Book your Party!</string>
    <string name="www_kids_play_com">www.kidsplay.com</string>
    <string name="_732_333_2211">732.333.2211</string>
</resources>
