<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue"
    android:fillViewport="true"
    tools:context="com.example.android.singlescreen.MainActivity">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/pr16"
        android:paddingLeft="@dimen/pl16"
        android:paddingRight="@dimen/pr16"
        android:paddingStart="@dimen/pl16"
        android:paddingTop="@dimen/pt16">

        <ImageView
            android:id="@+id/Kids"
            android:layout_width="@dimen/w200"
            android:layout_height="@dimen/h150"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/ml8"
            android:layout_marginStart="@dimen/ml8"
            android:src="@drawable/play4"
            tools:ignore="contentDescription" />


        <ImageView
            android:id="@+id/bouncer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bouncer150"
            android:layout_toEndOf="@id/Kids"
            android:layout_toRightOf="@id/Kids"
            android:src="@drawable/bounce"
            tools:ignore="contentDescription" />

        <ImageView
            android:id="@+id/linea"
            android:layout_width="match_parent"
            android:layout_height="@dimen/linea100"
            android:layout_below="@id/Kids"
            android:src="@drawable/linea"
            tools:ignore="contentDescription" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/linea"
            android:background="@color/back_color"
            android:orientation="vertical"
            android:padding="@dimen/p16">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/kids_mb1"
                android:layout_marginTop="@dimen/kids_mt1"
                android:background="@color/colorPrimaryDark"
                android:paddingBottom="@dimen/pb8"
                android:paddingEnd="@dimen/pr16"
                android:paddingLeft="@dimen/pl16"
                android:paddingRight="@dimen/pr16"
                android:paddingStart="@dimen/pl16"
                android:paddingTop="@dimen/pt8"
                android:text="@string/kids_play_indoor_play_center"
                android:textColor="@color/white"
                android:textSize="@dimen/ts18" />

            <TextView
                android:id="@+id/kids_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/mb1"
                android:layout_marginTop="@dimen/mt1"
                android:autoLink="web"
                android:background="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/web2"
                android:drawableStart="@drawable/web2"
                android:paddingBottom="@dimen/pb8"
                android:paddingEnd="@dimen/pr16"
                android:paddingLeft="@dimen/pl16"
                android:paddingRight="@dimen/pr16"
                android:paddingStart="@dimen/pl16"
                android:paddingTop="@dimen/pt8"
                android:text="@string/www_kids_play_com"
                android:textColor="@color/black"
                android:textSize="@dimen/ts15" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/mb1"
                android:layout_marginTop="@dimen/mt1"
                android:autoLink="map"
                android:background="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/map"
                android:drawableStart="@drawable/map"
                android:paddingBottom="@dimen/pb8"
                android:paddingEnd="@dimen/pr16"
                android:paddingLeft="@dimen/pl16"
                android:paddingRight="@dimen/pr16"
                android:paddingStart="@dimen/pl16"
                android:paddingTop="@dimen/pt8"
                android:text="@string/_5551_happy_ln_spring_tx_77389"
                android:textColor="@color/white"
                android:textSize="@dimen/ts15" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/mb1"
                android:layout_marginTop="@dimen/mt1"
                android:autoLink="phone"
                android:background="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/phone"
                android:drawableStart="@drawable/phone"
                android:paddingBottom="@dimen/pb8"
                android:paddingEnd="@dimen/pr16"
                android:paddingLeft="@dimen/pl16"
                android:paddingRight="@dimen/pr16"
                android:paddingStart="@dimen/pl16"
                android:paddingTop="@dimen/pt8"
                android:text="@string/_732_333_2211"
                android:textColor="@color/white"
                android:textSize="@dimen/ts15" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/mb1"
                android:layout_marginTop="@dimen/mt1"
                android:autoLink="email"
                android:background="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/email"
                android:drawableStart="@drawable/email"
                android:paddingBottom="@dimen/pb8"
                android:paddingEnd="@dimen/pr16"
                android:paddingLeft="@dimen/pl16"
                android:paddingRight="@dimen/pr16"
                android:paddingStart="@dimen/pl16"
                android:paddingTop="@dimen/pt8"
                android:text="@string/kids_play_g_mail_com"
                android:textColor="@color/white"
                android:textSize="@dimen/ts15" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/mb1"
                android:layout_marginTop="@dimen/mt1"
                android:background="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/clock"
                android:drawableStart="@drawable/clock"
                android:paddingBottom="@dimen/pb8"
                android:paddingEnd="@dimen/pr16"
                android:paddingLeft="@dimen/pl16"
                android:paddingRight="@dimen/pr16"
                android:paddingStart="@dimen/pl16"
                android:paddingTop="@dimen/pt8"
                android:text="@string/tu_sun_10am_7pm"
                android:textColor="@color/white"
                android:textSize="@dimen/ts15"
                tools:targetApi="jelly_bean" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/linear"
            android:layout_centerHorizontal="true"
            android:text="@string/book_your_party"
            android:textColor="@color/button_blue" />

    </RelativeLayout>

</ScrollView>